--- a/chimm.css
+++ b/chimm.css
@@ -1,20 +1,26 @@
 body{ background-color: rgb(237, 226, 248);
-text-align: center;}
-h1{
-    color: rgb(161, 126, 194);
+    text-align: center;}
+    h1{
+        color: rgb(161, 126, 194);
+    }
+    h2{
+        color: rgb(238, 163, 213);
+    }
+     strong{
+        color: rgba(137, 95, 177, 0.767);
+     }
+    h1{
+        font-style: oblique;
+    }
+    h2 {
+        font-style: oblique;
+    }
+    p{
+       font-style: inherit;
+    }
+.uva{
+    color: rgb(132, 41, 217);
 }
-h2{
-    color: rgb(238, 163, 213);
-}
- strong{
-    color: rgba(137, 95, 177, 0.767);
- }
-h1{
-    font-style: oblique;
-}
-h2 {
-    font-style: oblique;
-}
-p{
-   font-style: inherit;
+.batata{
+    color: rgb(248, 178, 237);
 }
